# mcapture

./: LICENSE  README.md  pyproject.toml
mcapture/: mcap_loader.py  synchronizer.py
sample/: sample_code.py
